# M5StackS3Learn

./: .gitignore  CMakeLists.txt  CodeArchitecture.md  Code_Wiki.md  README.md  repos.json  sdkconfig
.cache/clangd/index/: AnimatedGIF.h.E87AF367E38747FA.idx  EVE_commands.c.CFBF538DDA00C06B.idx  EVE_supplemental.c.4AA3387B201051C7.idx  ability.h.1AA79054E98CB086.idx  ability_api_wrapping.cpp.C5F6811F136F6B41.idx  ability_manager.cpp.45126EFA118D042F.idx  ability_manager.h.5A03146EC6D3D340.idx  aes3_tie_log.c.DBC32B70469A42FA.idx  animate.cpp.41B14E7CFA6FF9D3.idx  animate.hpp.875F71F1C36D1E4D.idx  animate_sequence.cpp.F7EFBC3482CEA9DB.idx  animate_sequence.hpp.21CEEE3735B19D27.idx  animate_value.cpp.700DF90D62E15656.idx  animate_value.hpp.C869512639DE99E0.idx  animate_vector2.cpp.281A9765AF115C8B.idx  animate_vector2.hpp.3371391904767A48.idx  animate_vector4.cpp.F6B085C054125704.idx  animate_vector4.hpp.511CBD6721EDD05F.idx  animimg001.c.44F7F1A4FAC7027A.idx  animimg002.c.85AF1B91B57FDC49.idx  animimg003.c.1A7B03B87A548559.idx  app_ability.cpp.E29729CC6CC462FF.idx  area.hpp.DA9D73536EF80249.idx  area_system.cpp.30425EE8C50997F6.idx  area_system.hpp.4B1EE8B70F4BA77F.idx  audio_codec_ctrl_i2c.c.E3C0B72049C7292C.idx  audio_codec_ctrl_if.h.DDF22AF18E5161A3.idx  audio_codec_ctrl_spi.c.69E47E2A94823337.idx  audio_codec_data_i2s.c.031563E3DDB105E5.idx  audio_codec_data_if.h.027259A02506C0E2.idx  audio_codec_gpio.c.2793488A8CBD6D93.idx  audio_codec_gpio_if.h.E71832D18157FF09.idx  audio_codec_if.h.42689F372CF4D483.idx  audio_codec_sw_vol.c.927A6A3C104BA3D6.idx  audio_codec_sw_vol.h.941D6605BA46AF7A.idx  audio_codec_vol_if.h.BA2D8DD74143AED4.idx  aw88298.c.1F1989F6AE84A1D2.idx  aw88298_dac.h.42EAD180D8DC397F.idx  aw88298_reg.h.EC51D50F962BB123.idx  base.h.993E828863A2C0D0.idx  (+1720 more)
docs/superpowers/plans/: 2026-04-09-app-manager-plan.md
docs/superpowers/specs/: 2026-04-09-app-manager-design.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
main/app/: app.h  app_event.h  app_manager.cpp  app_manager.h  penguin_app.cpp  penguin_app.h
main/board/: README.md  cores3_audio_codec.cc  cores3_audio_codec.h  m5stack_core_s3.cc  my_display.cc  my_display.h
main/driver/SG90Servo/: sg90Servo.cc  sg90Servo.h
main/hal/: hal.cpp  hal.h  hal_mcp.cpp
main/my_stack/motion/: motion.cpp  motion.h  servo.cpp  servo.h
main/network/: WifiManager.hpp
main/ui/: SmileAvatar.cc  SmileAvatar.h  SmileAvatar.hpp
servo_support/: servo_support.SLDPRT  servo_support.STL
